:adhesive_bandage::iphone:FriendShip fix  about spacing:iphone::adhesive_bandage:

--- a/src/components/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend.css
+++ b/src/components/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend.css
@@ -283,7 +283,7 @@ p {
     width: 24vw;
     height: 7.1vh;
     left: 156.9vw;
-    top: 37.9vh;
+    top: 42vh;
     font-size: 1.56vh;
     line-height: 2vh;
   }
